--- a/svc-portal-noticias.yaml
+++ b/svc-portal-noticias.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: svc-pod-1
+  name: svc-portal-noticias
 spec:
   type: NodePort
   ports:
-    - port: 8080
-      targetPort: 80
+    - port: 80
+      #targetPort: 80
       nodePort: 30000
   selector:
-    app: primeiro-pod
+    app: portal-noticias
