--- a/db-noticias-deployment.yaml
+++ b/db-noticias-deployment.yaml
@@ -17,6 +17,11 @@ spec:
           envFrom:
             - configMapRef:
                 name: db-configmap
+          readinessProbe:
+            tcpSocket:
+              port: 3306
+            initialDelaySeconds: 15
+            periodSeconds: 10
   replicas: 1
   selector:
     matchLabels:
