--- a/portal-noticias-deployment.yaml
+++ b/portal-noticias-deployment.yaml
@@ -17,6 +17,20 @@ spec:
           envFrom:
             - configMapRef:
                 name: portal-noticias-configmap
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 80
+            periodSeconds: 5
+            failureThreshold: 3
+            initialDelaySeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 80
+            periodSeconds: 10
+            failureThreshold: 2
+            initialDelaySeconds: 5
   replicas: 3
   selector:
     matchLabels:
