--- a/sistema-noticias-deployment.yaml
+++ b/sistema-noticias-deployment.yaml
@@ -17,6 +17,13 @@ spec:
           envFrom:
             - configMapRef:
                 name: sistema-noticias-configmap
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 80
+            periodSeconds: 5
+            failureThreshold: 3
+            initialDelaySeconds: 10
   replicas: 1
   selector:
     matchLabels:
