--- a/portal-noticias/portal-noticias-deployment.yaml
+++ b/portal-noticias/portal-noticias-deployment.yaml
@@ -31,6 +31,9 @@ spec:
             periodSeconds: 10
             failureThreshold: 2
             initialDelaySeconds: 5
+          resources:
+            requests:
+              cpu: 10m
   replicas: 3
   selector:
     matchLabels:
